Fix arrows position when socialmedia is visible
Change control-map folder
Cosmetic changes

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -278,7 +278,7 @@ ol, ul, li {
   cursor: default;
 }
 
-.container .slider .circle {
+.container .circle {
   position: relative;
   width: 60px;
   height: 60px;
@@ -291,9 +291,10 @@ ol, ul, li {
   transition: all .3s ease;
   cursor: pointer;
   perspective: 500px;
+  z-index: 2;
 }
 
-.container .slider .circle::before {
+.container .circle::before {
   position: absolute;
   content: '';
   width: 75px;
@@ -305,7 +306,7 @@ ol, ul, li {
   transition: all .3s ease;
 }
 
-.container .slider .circle::after {
+.container .circle::after {
   position: absolute;
   content: '';
   width: 85px;
@@ -318,25 +319,25 @@ ol, ul, li {
   transition: all .3s ease;
 }
 
-.container .slider .circle:hover::before {
+.container .circle:hover::before {
   width: 95px;
   height: 95px;
 }
 
-.container .slider .circle:hover::after {
+.container .circle:hover::after {
   width: 55px;
   height: 55px;
 }
 
-.container .slider .circle:hover span {
+.container .circle:hover span {
   transform: scale(0);
 }
 
-.container .slider .circle:hover .fa-info {
+.container .circle:hover .fa-info {
   transform: scale(1);
 }
 
-.container .slider .circle span {
+.container .circle span {
   position: absolute;
   cursor: default;
   color: white;
@@ -345,27 +346,28 @@ ol, ul, li {
   transition: all .3s ease;
 }
 
-.container .slider .circle .fa-info {
+.container .circle .fa-info {
   position: absolute;
   transition: all .3s ease;
   transform: scale(0);
 }
 
-.container .slider .socialmedia {
+.container .socialmedia {
   border-radius: 50%;
   font-size: 1.3rem;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   transition: all .3s ease;
+  z-index: -10;
 }
 
-.container .slider .socialmedia--visible {
+.container .socialmedia--visible {
   visibility: visible !important;
   opacity: 1 !important;
 }
 
-.container .slider .socialmedia-content {
+.container .socialmedia-content {
   position: relative;
   min-width: 300px;
   height: 50px;
@@ -375,14 +377,14 @@ ol, ul, li {
   z-index: -10;
 }
 
-.container .slider .socialmedia a {
+.container .socialmedia a {
   width: 100%;
   height: 100%;
   text-align: center;
   line-height: 40px;
 }
 
-.container .slider .socialmedia-box {
+.container .socialmedia-box {
   position: absolute;
   width: 40px;
   height: 40px;
@@ -394,7 +396,7 @@ ol, ul, li {
   transform: translateX(-50%);
 }
 
-.container .slider .socialmedia-box::before {
+.container .socialmedia-box::before {
   position: absolute;
   content: '';
   width: 55px;
@@ -406,7 +408,7 @@ ol, ul, li {
   transition: all .3s ease;
 }
 
-.container .slider .socialmedia-box::after {
+.container .socialmedia-box::after {
   position: absolute;
   content: '';
   width: 65px;
@@ -419,12 +421,12 @@ ol, ul, li {
   transition: all .3s ease;
 }
 
-.container .slider .socialmedia-box:hover::before {
+.container .socialmedia-box:hover::before {
   width: 80px;
   height: 80px;
 }
 
-.container .slider .socialmedia-box:hover::after {
+.container .socialmedia-box:hover::after {
   width: 55px;
   height: 55px;
 }
@@ -463,12 +465,13 @@ ol, ul, li {
 .control-map {
   position: relative;
   width: 100px;
-  height: 100px;
-  top: 100%;
+  height: 30px;
+  top: calc(100% - 20px);
   left: 50%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  transition: all .5s ease;
   justify-content: space-evenly;
   transform: translate(-50%, -70%);
 }
