--- a/web/assets/sass/components/_control-map.sass
+++ b/web/assets/sass/components/_control-map.sass
@@ -3,12 +3,13 @@ $arrow-size: 30px
 .control-map
     position: relative
     width: 100px
-    height: 100px
-    top: 100%
+    height: 30px
+    top: calc(100% - 20px)
     left: 50%
     display: flex
     flex-direction: row
     align-items: center
+    transition: all .5s ease
     justify-content: space-evenly
     transform: translate(-50%, -70%)
 
