--- a/web/assets/sass/layout/_scene.sass
+++ b/web/assets/sass/layout/_scene.sass
@@ -153,158 +153,13 @@
 
         h1
             cursor: default
-            // transition: all .3s ease-out
             font-size: clamp(1rem, 1.3rem, 2.2rem)
 
         p
             cursor: default
-            // transition: all .3s ease-out
 
-    .circle
-        position: relative
-        width: 60px
-        height: 60px
-        background: #8a2be2
-        bottom: -90px
-        border-radius: 50%
-        display: flex
-        justify-content: center
-        align-items: center
-        transition: all .3s ease
-        cursor: pointer
-        perspective: 500px
-
-        &::before
-            position: absolute
-            content: ''
-            width: 75px
-            height: 75px
-            background: #8a2be2
-            border-radius: 50%
-            opacity: .3
-            z-index: -1
-            transition: all .3s ease
-
-        &::after
-            position: absolute
-            content: ''
-            width: 85px
-            height: 85px
-            background: transparent
-            border: 2px solid #8a2be2
-            border-radius: 50%
-            opacity: .6
-            z-index: -1
-            transition: all .3s ease
-
-        &:hover::before
-            width: 95px
-            height: 95px
-
-        &:hover::after
-            width: 55px
-            height: 55px
-
-        &:hover span
-            transform: scale(0)
-
-        &:hover .fa-info
-            transform: scale(1)
-
-        span
-            position: absolute
-            cursor: default
-            color: white
-            touch-action: none
-            transform: scale(1)
-            transition: all .3s ease
-
-        .fa-info
-            position: absolute
-            transition: all .3s ease
-            transform: scale(0)
-
-    .socialmedia
-        border-radius: 50%
-        font-size: 1.3rem
-        display: flex
-        align-items: center
-        justify-content: space-evenly
-        transition: all .3s ease
-
-        &--visible
-            visibility: visible !important
-            opacity: 1 !important
-
-        &-content
-            position: relative
-            min-width: 300px
-            height: 50px
-            bottom: 0
-            visibility: hidden
-            opacity: 0
-            z-index: -10
-
-        a
-            width: 100%
-            height: 100%
-            text-align: center
-            line-height: 40px
-
-        &-box
-            position: absolute
-            width: 40px
-            height: 40px
-            background: #8a2be2
-            transition: all .5s ease
-            z-index: -50
-            left: 50%
-            bottom: 5px
-            transform: translateX(-50%)
-
-            &::before
-                position: absolute
-                content: ''
-                width: 55px
-                height: 55px
-                background: #8a2be2
-                border-radius: 50%
-                opacity: .3
-                z-index: -1
-                transition: all .3s ease
-
-            &::after
-                position: absolute
-                content: ''
-                width: 65px
-                height: 65px
-                background: transparent
-                border: 2px solid #8a2be2
-                border-radius: 50%
-                opacity: .6
-                z-index: -1
-                transition: all .3s ease
-
-            &:hover::before
-                width: 80px
-                height: 80px
-
-            &:hover::after
-                width: 55px
-                height: 55px
-
-        &-box:nth-child(1)
-            // left: 0
-
-        &-box:nth-child(2)
-            // left: 0
-
-        &-box:nth-child(3)
-            // left: 0
-
-@for $i from 1 through 3
-    .socialmedia-box:nth-child(#{$i}n)
-        transition-delay: #{$i * .3}s
+@import '../components/circle'
+@import '../components/socialmedia'
 
 .--clicked
     width: 100% !important
